update role permission and mail notification for booking business